Add step to push to registry

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
-    <title>Hello World</title>
+<title>%%</title>
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    p
+    <h1>%%</h1>
 </body>
 
 </html>
