--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-<title>%%</title>
+<title>ECR Demo</title>
 </head>
 
 <body>
-    <h1>%%</h1>
-    Cambio para commit 4
+    <h1>ECR DEMO</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae aspernatur voluptatem nostrum ullam, incidunt quos eos. Deserunt optio odio voluptatem officia! Repellendus dicta eveniet ut dolor consequuntur amet ipsam sed.</p>
 </body>
 
 </html>
